[package]
name = "serenity-arma"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.7", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }